Aggiunto incapsulamento e centralizzazione del party nel file Party.java. Aggiornati tutti gli accetti alla lista in maniera raw.